# CRMchat

./: .dockerignore  .gitignore  AI_USAGE.md  Dockerfile  README.md  REFACTORING_EXPLANATION.md  REVIEW_CODE.md  crmchat.db  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  db.py  deps.py  main.py  models.py  repository.py  schemas.py  service.py
tests/: conftest.py  test_rbac_audit.py  test_risk_engine.py  test_webhooks.py
